--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-    <title>Qwenten</title>
+    <title>EhhterCrafters</title>
     <!-- Meta tag Keywords -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
@@ -25,10 +25,10 @@
             </div>
             <div class="w3l-coming-soon-page">
                 <div class="coming-block">
-                    <h1>Coming Soon</h1>
+                    <h1>GRAN ACTUALIZACION</h1>
                     <p>We are preparing something special. Don't go too far!</p>
-                    <a href="https://discord.gg/vWNWgJmrh5" class="home">Go to Discord</a>
-                    <a href="https://discord.superhori.com/" class="home">Go to Facebook Page</a>
+                    <a href="https://discord.gg/qASBvrWV" class="home">Discord</a>
+                    <a href="https://www.facebook.com/EhtterCrafters" class="home">Pagina de Facebook</a>
                 </div>
             </div>
         </div>
