--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="w3l-coming-soon-page">
                 <div class="coming-block">
                     <h1>GRAN ACTUALIZACION</h1>
-                    <p>We are preparing something special. Don't go too far!</p>
+                    <p>Estamos preparando cosas increibles para Ustedes! Att: Qwenten</p>
                     <a href="https://discord.gg/qASBvrWV" class="home">Discord</a>
                     <a href="https://www.facebook.com/EhtterCrafters" class="home">Pagina de Facebook</a>
                 </div>
