--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="logo">
                 
                 <a class="brand-logo" href="#index.html">
-                    <img src="images/minecraft_title.png" style="height:135px;" />
+                    <img src="images/minecraft_title (1).png" style="height:135px;" />
                 </a> 
             </div>
             <div class="w3l-coming-soon-page">
