--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="w3l-coming-soon-page">
                 <div class="coming-block">
-                    <h1>GRAN ACTUALIZACION</h1>
+                    <h1>Novedades destacadas</h1>
                     <p>Estamos preparando cosas increibles para Ustedes! Att: Qwenten</p>
                     <a href="https://discord.gg/qASBvrWV" class="home">Discord</a>
                     <a href="https://www.facebook.com/EhtterCrafters" class="home">Pagina de Facebook</a>
