--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="backgroundFront"></div>
     <div class="center" style="display: flex; justify-content: center;">
         <div class="card">
-            <div class="title">Network de angel xd</div>
+            <div class="title">Lunarys Crafters</div>
             <div class="subtitle">Pronto</div>
             <!--aqui puedes poner el link del server de discord-->
             <a class="button" href ="https://Youtube.com">Youtube</a>
