--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="center" style="display: flex; justify-content: center;">
         <div class="card">
             <div class="title">Lunarys Crafters</div>
-            <div class="subtitle">Pronto</div>
+            <div class="subtitle">Proximamente</div>
             <!--aqui puedes poner el link del server de discord-->
             <a class="button" href ="https://Youtube.com">Youtube</a>
         </div>
